Release LocalSync 1.4.0